# StockerRank

./: .gitignore  Analyst.py  README.md  SPComparison.xlsx  StockInterpretter.py  StockInterpretter2.py  StockScreener - Copy.xlsx  StockScreener.csv  StockScreener.py  StockScreener.xlsx  StockScreenerTest.xlsx  __main__.py  bookToPrice1returnOnAssets1.json  config.yaml  demo.py  earningsYield1rektagainreturnOnAssets1rektagain.json  earningsYield1rektreturnOnAssets1rekt.json  earningsYield1rektreturnOnCapital1rekt.json  earningsYield1rektreturnOnEquity1rekt.json  earningsYield1returnOnAssets1.json  earningsYield1returnOnAssets1CPS1.json  ece453.py  forwardPE1CPS1.json  forwardPE1beta1.json  forwardPE1returnOnAssets1.json  forwardPE1returnOnAssets1beta1.json  forwardPE1returnOnAssets1currentRatio1.json  forwardPE1returnOnAssets1quickRatio1.json  forwardPE1returnOnEquity1.json  pegRatio1returnOnAssets1.json  pyproject.toml  requirements.txt  stocktwit.py  stonks.xls  test.py  ~$SPComparison.xlsx
stock_screener/: cli.py  config.py  metrics.py  stock.py  stock_screener.py
user_articles/: 161point8_articles.json  7zupgi_articles.json  ACInvestorBlog_articles.json  AIdT_articles.json  ATMcharts_articles.json  AZOZ_articles.json  Acre_Moneywork_articles.json  AdamHGrimes_articles.json  Adamelmostehi_articles.json  AehrHeadClown_articles.json  Aevitas_articles.json  Aiera_articles.json  AllStockInvestor_articles.json  AllinCapital_articles.json  Andrewthrasher_articles.json  Andy__Moss_articles.json  BATSnDOGS_articles.json  BEALLISH_articles.json  BannedGecko_articles.json  (+405 more)
(+5 files in other folders)
