[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-screener"
version = "0.4.0"
description = "A stock screening and ranking tool using latest metrics"
requires-python = ">=3.10"
dependencies = [
    "yahooquery==2.4.1",
    "pyyaml>=6.0",
]

[project.scripts]
stock-screener = "stock_screener.cli:main"